Cleaning up some contrast issues

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,12 +4,12 @@
 //
 
 // Colors
-$blue: #4183C4;
+$blue: #295785;
 
 // Grays
 $black: #000;
 $darkerGray: #222;
-$darkGray: #333;
+$darkGray: #222;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
